# toy2d

./: .gitignore  CMakeLists.txt  ReadMe.md  welcome.txt
.github/workflow/: build.yml
.github/workflows/: build.yml
cmake/: CopyFiles.cmake  FindSDL2.cmake  FindVulkan.cmake  copydll.cmake
include/: context.hpp  device.hpp  pch.hpp  raw_renderer.hpp  renderer.hpp  vertex.hpp
sandbox/: CMakeLists.txt  sandbox.cpp
sandbox/compute/: buffer.cpp  buffer.hpp  compute.cpp
shader/: shader.comp  shader.frag  shader.vert
src/: buffer.cpp  command_manager.cpp  context.cpp  descriptor_manager.cpp  device.cpp  math.cpp  raw_renderer.cpp  render_process.cpp  renderer.cpp  shader.cpp  swapchain.cpp  texture.cpp  tool.cpp  toy2d.cpp  vertex.cpp
test/: CMakeLists.txt  helloworld.cpp
toy2d/: buffer.hpp  command_manager.hpp  context.hpp  descriptor_manager.hpp  math.hpp  render_process.hpp  renderer.hpp  shader.hpp  swapchain.hpp  texture.hpp  tool.hpp  toy2d.hpp  uniform.hpp  vertex.hpp
